@@ -54,6 +54,7 @@ import java.util.Map;
 import java.util.Set;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import jdk.javadoc.internal.doclets.toolkit.BaseConfiguration;
 import jdk.javadoc.internal.doclets.toolkit.BaseOptions;
@@ -126,7 +127,7 @@ public class VisibleMemberTable {
     private Map<ExecutableElement, PropertyMembers> propertyMap = new HashMap<>();
 
     // Keeps track of method overrides
-    Map<ExecutableElement, OverridingMethodInfo> overriddenMethodTable
+    Map<ExecutableElement, OverriddenMethodInfo> overriddenMethodTable
             = new LinkedHashMap<>();
 
     protected VisibleMemberTable(TypeElement typeElement, BaseConfiguration configuration,
@@ -199,7 +200,7 @@ public class VisibleMemberTable {
 
         return visibleMembers.getOrDefault(kind, Collections.emptyList()).stream()
                 .filter(p)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -240,10 +241,10 @@ public class VisibleMemberTable {
     public ExecutableElement getOverriddenMethod(ExecutableElement e) {
         ensureInitialized();
 
-        OverridingMethodInfo found = overriddenMethodTable.get(e);
+        OverriddenMethodInfo found = overriddenMethodTable.get(e);
         if (found != null
                 && (found.simpleOverride || utils.isUndocumentedEnclosure(utils.getEnclosingTypeElement(e)))) {
-            return found.overrider;
+            return found.overridden;
         }
         return null;
     }
@@ -256,9 +257,9 @@ public class VisibleMemberTable {
     public ExecutableElement getSimplyOverriddenMethod(ExecutableElement e) {
         ensureInitialized();
 
-        OverridingMethodInfo found = overriddenMethodTable.get(e);
+        OverriddenMethodInfo found = overriddenMethodTable.get(e);
         if (found != null && found.simpleOverride) {
-            return found.overrider;
+            return found.overridden;
         }
         return null;
     }
@@ -408,8 +409,8 @@ public class VisibleMemberTable {
             default:
                 List<Element> list = lmt.getOrderedMembers(kind).stream()
                         .filter(this::mustDocument)
-                        .collect(Collectors.toList());
-                visibleMembers.put(kind, Collections.unmodifiableList(list));
+                        .toList();
+                visibleMembers.put(kind, list);
                 break;
         }
     }
@@ -454,19 +455,16 @@ public class VisibleMemberTable {
 
         // Filter out members in the inherited list that are hidden
         // by this type or should not be inherited at all.
-        List<Element> list = result.stream()
-                .filter(e -> allowInheritedMembers(e, kind, lmt))
-                .collect(Collectors.toList());
-
-        // Prefix local results first
-        list.addAll(0, lmt.getOrderedMembers(kind));
+        Stream<Element> inheritedStream = result.stream()
+                .filter(e -> allowInheritedMembers(e, kind, lmt));
 
         // Filter out elements that should not be documented
-        list = list.stream()
-                .filter(this::mustDocument)
-                .collect(Collectors.toList());
+        // Prefix local results first
+        List<Element> list = Stream.concat(lmt.getOrderedMembers(kind).stream(), inheritedStream)
+                                   .filter(this::mustDocument)
+                                   .toList();
 
-        visibleMembers.put(kind, Collections.unmodifiableList(list));
+        visibleMembers.put(kind, list);
     }
 
     private void computeVisibleMethods(LocalMemberTable lmt) {
@@ -475,9 +473,9 @@ public class VisibleMemberTable {
         for (VisibleMemberTable pvmt : parents) {
             // Merge the lineage overrides into local table
             pvmt.overriddenMethodTable.entrySet().forEach(e -> {
-                OverridingMethodInfo p = e.getValue();
+                OverriddenMethodInfo p = e.getValue();
                 if (!p.simpleOverride) { // consider only real overrides
-                    List<ExecutableElement> list = overriddenByTable.computeIfAbsent(p.overrider,
+                    List<ExecutableElement> list = overriddenByTable.computeIfAbsent(p.overridden,
                             k -> new ArrayList<>());
                     list.add(e.getKey());
                 }
@@ -486,36 +484,37 @@ public class VisibleMemberTable {
         }
 
         // Filter out inherited methods that:
-        // a. cannot override (private instance members)
+        // a. cannot be overridden (private instance members)
         // b. are overridden and should not be visible in this type
         // c. are hidden in the type being considered
-        // see allowInheritedMethods, which performs the above actions
-        List<Element> list = inheritedMethods.stream()
-                .filter(e -> allowInheritedMethods((ExecutableElement) e, overriddenByTable, lmt))
-                .collect(Collectors.toList());
+        // see allowInheritedMethod, which performs the above actions
+        // nb. This statement has side effects that can initialize
+        // members of the overridenMethodTable field, so it must be
+        // evaluated eagerly with toList().
+        List<Element> inheritedMethodsList = inheritedMethods.stream()
+                .filter(e -> allowInheritedMethod((ExecutableElement) e, overriddenByTable, lmt))
+                .toList();
 
         // Filter out the local methods, that do not override or simply
         // overrides a super method, or those methods that should not
         // be visible.
         Predicate<ExecutableElement> isVisible = m -> {
-            OverridingMethodInfo p = overriddenMethodTable.getOrDefault(m, null);
+            OverriddenMethodInfo p = overriddenMethodTable.getOrDefault(m, null);
             return p == null || !p.simpleOverride;
         };
-        List<Element> localList = lmt.getOrderedMembers(Kind.METHODS)
+
+        Stream<ExecutableElement> localStream = lmt.getOrderedMembers(Kind.METHODS)
                 .stream()
                 .map(m -> (ExecutableElement)m)
-                .filter(isVisible)
-                .collect(Collectors.toList());
+                .filter(isVisible);
 
-        // Merge the above lists, making sure the local methods precede the others
-        list.addAll(0, localList);
-
+        // Merge the above list and stream, making sure the local methods precede the others
         // Final filtration of elements
-        list = list.stream()
+        List<Element> list = Stream.concat(localStream,inheritedMethodsList.stream())
                 .filter(this::mustDocument)
-                .collect(Collectors.toList());
+                .toList();
 
-        visibleMembers.put(Kind.METHODS, Collections.unmodifiableList(list));
+        visibleMembers.put(Kind.METHODS, list);
 
         // Copy over overridden tables from the lineage, and finish up.
         for (VisibleMemberTable pvmt : parents) {
@@ -529,9 +528,9 @@ public class VisibleMemberTable {
         return utils.isInterface(enclosing);
     }
 
-    boolean allowInheritedMethods(ExecutableElement inheritedMethod,
-                                  Map<ExecutableElement, List<ExecutableElement>> inheritedOverriddenTable,
-                                  LocalMemberTable lmt) {
+    boolean allowInheritedMethod(ExecutableElement inheritedMethod,
+                                 Map<ExecutableElement, List<ExecutableElement>> overriddenByTable,
+                                 LocalMemberTable lmt) {
         if (!isInherited(inheritedMethod))
             return false;
 
@@ -552,7 +551,7 @@ public class VisibleMemberTable {
         // in favor of concrete overriding methods, for instance those that have
         // API documentation and are not abstract OR default methods.
         if (inInterface) {
-            List<ExecutableElement> list = inheritedOverriddenTable.get(inheritedMethod);
+            List<ExecutableElement> list = overriddenByTable.get(inheritedMethod);
             if (list != null) {
                 boolean found = list.stream()
                         .anyMatch(this::isEnclosureInterface);
@@ -586,16 +585,19 @@ public class VisibleMemberTable {
                 TypeElement encl = utils.getEnclosingTypeElement(inheritedMethod);
                 if (utils.isUndocumentedEnclosure(encl)) {
                     overriddenMethodTable.computeIfAbsent(lMethod,
-                            l -> new OverridingMethodInfo(inheritedMethod, false));
+                            l -> new OverriddenMethodInfo(inheritedMethod, false));
                     return false;
                 }
 
                 // Even with --override-methods=summary we want to include details of
-                // overriding method if something noteworthy has been added or changed.
+                // overriding method if something noteworthy has been added or changed
+                // either in the local overriding method or an in-between overriding method
+                // (as evidenced by an entry in overriddenByTable).
                 boolean simpleOverride = utils.isSimpleOverride(lMethod)
-                        && !overridingSignatureChanged(lMethod, inheritedMethod);
+                        && !overridingSignatureChanged(lMethod, inheritedMethod)
+                        && !overriddenByTable.containsKey(inheritedMethod);
                 overriddenMethodTable.computeIfAbsent(lMethod,
-                        l -> new OverridingMethodInfo(inheritedMethod, simpleOverride));
+                        l -> new OverriddenMethodInfo(inheritedMethod, simpleOverride));
                 return simpleOverride;
             }
         }
@@ -792,7 +794,7 @@ public class VisibleMemberTable {
         List<Element> getPropertyMethods(String methodName, int argcount) {
             return getMembers(methodName + ":" + argcount, Kind.METHODS).stream()
                     .filter(m -> (utils.isPublic(m) || utils.isProtected(m)))
-                    .collect(Collectors.toList());
+                    .toList();
         }
     }
 
@@ -854,17 +856,17 @@ public class VisibleMemberTable {
             return;
 
         PropertyUtils pUtils = config.propertyUtils;
-        List<ExecutableElement> list = visibleMembers.getOrDefault(Kind.METHODS, Collections.emptyList())
+        List<Element> list = visibleMembers.getOrDefault(Kind.METHODS, Collections.emptyList())
                 .stream()
-                .map(m -> (ExecutableElement)m)
-                .filter(pUtils::isPropertyMethod)
-                .collect(Collectors.toList());
+                .filter(e -> pUtils.isPropertyMethod((ExecutableElement) e))
+                .toList();
 
-        visibleMembers.put(Kind.PROPERTIES, Collections.unmodifiableList(list));
+        visibleMembers.put(Kind.PROPERTIES, list);
 
         List<ExecutableElement> propertyMethods = list.stream()
+                .map(e -> (ExecutableElement) e)
                 .filter(e -> utils.getEnclosingTypeElement(e) == te)
-                .collect(Collectors.toList());
+                .toList();
 
         // Compute additional properties related sundries.
         for (ExecutableElement propertyMethod : propertyMethods) {
@@ -928,7 +930,7 @@ public class VisibleMemberTable {
         ImplementedMethods imf = getImplementedMethodsFinder(method);
         return imf.getImplementedMethods().stream()
                 .filter(m -> getSimplyOverriddenMethod(m) == null)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public TypeMirror getImplementedMethodHolder(ExecutableElement method,
@@ -1031,21 +1033,21 @@ public class VisibleMemberTable {
     }
 
     /**
-     * A simple container to encapsulate an overriding method
+     * A simple container to encapsulate an overridden method
      * and the type of override.
      */
-    static class OverridingMethodInfo {
-        final ExecutableElement overrider;
+    static class OverriddenMethodInfo {
+        final ExecutableElement overridden;
         final boolean simpleOverride;
 
-        public OverridingMethodInfo(ExecutableElement overrider, boolean simpleOverride) {
-            this.overrider = overrider;
+        public OverriddenMethodInfo(ExecutableElement overridden, boolean simpleOverride) {
+            this.overridden = overridden;
             this.simpleOverride = simpleOverride;
         }
 
         @Override
         public String toString() {
-            return "OverridingMethodInfo[" + overrider + ",simple:" + simpleOverride + "]";
+            return "OverriddenMethodInfo[" + overridden + ",simple:" + simpleOverride + "]";
         }
     }
 }
